monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A4018/A4018.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A4018;

grammar A4018 {

  A = ["`"];

}
